        - Added additional data protection feature that uses the referer to
          decide whether or not to preselect an Identity Provider in the
          Embedded WAYF
        - If the Discovery Feed feature is activated only those IdPs are shown 
          that are contained in the feed. Others will be hidden automatically.

1.15    Release date: 21. October 2011
        - A default and custom CSS file can now be used
        - Graphical design now is based new SWITCH harmos elements
        - Adapted JSON output to use format used by Shibboleth SP
        - Renamed some string keys to make them independent from SWITCH
          ###################################################################
          Please review the 'Specific Update Instructions' in the README file
          ###################################################################
        - Added support for the Shibboleth SP 2.4 Discovery Feed JSON output
          in Embedded WAYF
        - Focus on submit button works better with different browsers
        - Invalid values for width and height are now defaulted to auto for
          Embedded WAYF
        - Fixed a URL composing bug that resulted in a wrong return URL to 
          the Service Provider if the return parameter did not contain any GET
          arguments. Reported by Tom Scavo
        - Made implementation behave according to the Discovery Service protocol
          specification when it comes to the return parameter. This parameter
          is optional in case the DS knows the SP Discovery URL.
          Reported by Tom Scavo.
          
1.14.3  Release date: 4. March 2011
        - Fixed a race condition. Thanks go to Robert Basch from MIT for 
          reporting the issue and providing a patch.

1.14.2  Release date: 15. December 2010
        - IDProvider.conf.php and config.php are not overwritten anymore by upgrades
        - Logging to syslog now works properly and is more consistent