@@ -1,63 +1,0 @@
-﻿
-/* textbox part of the dropdown list */
-.idd_textbox {
-	border-style: solid;
-	border-color: #333333;
-	vertical-align: middle;
-}
-
-/* dropdown arrow control */
-.idd_icon {
-	border-color: #C0C0C0;
-	border-style: solid solid solid none;
-	border-width: 0;	
-}
-
-/* Dropdown list */
-div.idd_list {
-	border: thin solid #C0C0C0;
-	max-height: 300px;
-	background-color: #FFFFFF;
-	padding-left: 5px;
-	padding-top: 0px;
-	padding-bottom: 0px;
-	z-index: 900;
-}
-
-/* Option Group headers */
-.idd_listItemGroupHeader
-{
-	font-family:Verdana, sans-serif;
-	font-size: 12px;
-	padding-bottom: 2px;
-	font-weight: bold;
-	text-align: left
-}
-
-/* Dropdown list items except group headers */
-.idd_listItem {
-	font-family:Verdana, sans-serif;
-	font-size: 12px;
-	height: 1em; 
-	margin: 0px;
-	padding-bottom: 2px;
-	text-align:left;
-}
-
-/* Dropdown list items nested under group headers */
-.idd_listItem_Nested {
-	padding-left: 15px;
-}
-
-/* mouseover on all list items except group headers */
-.idd_listItem_Hover
-{
-	color: #FFFFFF;
-	background-color: #00247D;
-}
-
-/* List items that are disabled */
-.idd_listItem_Disabled {
-	color: #C0C0C0;
-	cursor: default;
-}
