@@ -33,6 +33,8 @@ SWITCHwayf Changes and Version History:
           Embedded WAYF
         - If the Discovery Feed feature is activated only those IdPs are shown 
           that are contained in the feed. Others will be hidden automatically.
+        - Added Locations to format of IDP entries to allow users to search
+          Identity Providers using a geographical hint.
 
 1.15    Release date: 21. October 2011
         - A default and custom CSS file can now be used
